fix #21 (horizontal scrollbar)

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -30,6 +30,8 @@ body {
 
   color: var(--color-text-main);
   background-color: var(--color-background-misc);
+
+  overflow-y: scroll;
 }
 
 @media (min-width: 768px) {
